--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     // https://mvnrepository.com/artifact/commons-codec/commons-codec
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
     implementation 'androidx.preference:preference:1.2.0'
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+
 
 
     testImplementation 'junit:junit:4.13.2'
