--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
     implementation group: 'commons-codec', name: 'commons-codec', version: '1.15'
     implementation 'androidx.preference:preference:1.2.0'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
-
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
 
 
     testImplementation 'junit:junit:4.13.2'
